--- a/OfCourse/.classpath
+++ b/OfCourse/.classpath
@@ -7,5 +7,6 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/OfCourse/lib/jsoup-1.7.3-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/forms-1.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
