--- a/OfCourse/.classpath
+++ b/OfCourse/.classpath
@@ -9,5 +9,13 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/forms-1.3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.2.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/OfCourse/lib/commons-lang3-3.2.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.3.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
