--- a/OfCourse/.project
+++ b/OfCourse/.project
@@ -14,4 +14,24 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1396363553473</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-????.txt</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1396363553533</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-history.txt</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
