--- a/OfCourse/build.xml
+++ b/OfCourse/build.xml
@@ -11,19 +11,16 @@
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.6"/>
     <property name="source" value="1.6"/>
-    <path id="JUnit 4.libraryclasspath">
-        <pathelement location="${ECLIPSE_HOME}/plugins/org.junit_4.10.0.v4_10_0_v20120426-0900/junit.jar"/>
-        <pathelement location="${ECLIPSE_HOME}/plugins/org.hamcrest.core_1.1.0.v20090501071000.jar"/>
-    </path>
     <path id="OfCourse.classpath">
         <pathelement location="bin"/>
         <pathelement location="lib/jsoup-1.7.3.jar"/>
         <pathelement location="lib/forms-1.3.0.jar"/>
-        <path refid="JUnit 4.libraryclasspath"/>
         <pathelement location="lib/commons-lang3-3.2.1.jar"/>
         <pathelement location="lib/commons-logging-1.1.3.jar"/>
         <pathelement location="lib/httpclient-4.3.3.jar"/>
         <pathelement location="lib/httpcore-4.3.2.jar"/>
+        <pathelement location="lib/junit.jar"/>
+        <pathelement location="lib/org.hamcrest.core_1.1.0.v20090501071000.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -61,16 +58,6 @@
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
-    <target name="courseParse">
-        <java classname="ofcourse.courseParse" failonerror="true" fork="yes">
-            <classpath refid="OfCourse.classpath"/>
-        </java>
-    </target>
-    <target name="MainWindow">
-        <java classname="ofcoursegui.MainWindow" failonerror="true" fork="yes">
-            <classpath refid="OfCourse.classpath"/>
-        </java>
-    </target>
     <target name="CodeTest">
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
@@ -79,6 +66,11 @@
             <classpath refid="OfCourse.classpath"/>
         </junit>
     </target>
+    <target name="courseParse">
+        <java classname="ofcourse.courseParse" failonerror="true" fork="yes">
+            <classpath refid="OfCourse.classpath"/>
+        </java>
+    </target>
     <target name="CourseTest">
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
@@ -86,6 +78,11 @@
             <test name="test.CourseTest" todir="${junit.output.dir}"/>
             <classpath refid="OfCourse.classpath"/>
         </junit>
+    </target>
+    <target name="MainWindow">
+        <java classname="ofcoursegui.MainWindow" failonerror="true" fork="yes">
+            <classpath refid="OfCourse.classpath"/>
+        </java>
     </target>
     <target name="NetworkTest">
         <mkdir dir="${junit.output.dir}"/>
