--- a/OfCourse/.project
+++ b/OfCourse/.project
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1396363553473</id>
+			<id>1397284202423</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
@@ -25,12 +25,21 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1396363553533</id>
+			<id>1397284202423</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-history.txt</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1397284202433</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-????</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
