--- a/OfCourse/.project
+++ b/OfCourse/.project
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1397740030385</id>
+			<id>1397740078104</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
@@ -25,7 +25,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1397740030390</id>
+			<id>1397740078111</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
@@ -34,12 +34,21 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1397740030393</id>
+			<id>1397740078116</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-????</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1397740078121</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-CACHEHISTORY.txt</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
