--- a/OfCourse/.classpath
+++ b/OfCourse/.classpath
@@ -18,5 +18,10 @@
 	<classpathentry kind="lib" path="lib/httpcore-4.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/miglayout15-swing.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/uispec4j-2.4-jdk16.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/OfCourse/lib/uispec4j-2.4-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
