--- a/OfCourse/.classpath
+++ b/OfCourse/.classpath
@@ -18,11 +18,11 @@
 	<classpathentry kind="lib" path="lib/httpcore-4.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/miglayout15-swing.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/hin/Desktop/eclipse/programs/OfCourse/lib/junit.jar"/>
 	<classpathentry kind="lib" path="lib/uispec4j-2.4-jdk16.jar" sourcepath="lib/uispec4j-2.4-jdk6-sources.zip">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:/C:/Users/hin/Desktop/eclipse/programs/OfCourse/lib/uispec4j-2.4-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/junit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
